# voxis

./: .gitignore  CLAUDE.md  Dockerfile.ci  LICENSE  README.md  SECURITY.md  audit-v6-completeness.md  e2e-landing-screenshots.cjs  harness.html  overlay.html  package.json  research-bio-verify-v2.md  research-cellbody-parts.md  research-cilia-hydrodynamics.md  research-cilia-structure-inertia.md  research-ciliate-propulsion-coupling.md  research-fluid-medium-motion.md  research-math-verify-v2.md  research-membrane-areacons.md  review-count-placement.md  review-deformation.md  review-fullpass-geometry-inertia.md  review-growth-compression.md  review-model-deficiencies.md  review-motion-vector.md  review-plan-critique.md  review-plan-v2-verify.md  vite.config.ts  vitest.config.ts
docs/: CELL_MATH.md  PLAN_LANDING_REVIEW_FIXES.md  THEMES.md  THEME_EDITING.md
docs-site/: CNAME  _config.yml  cell-math.md  development.md  index.md  installation.md  security.md  settings.md  theme-author-guide.md  theme-editing.md  themes.md  troubleshooting.md  usage.md
e2e/: _pill-mode.spec.ts  cell-cilia-curve.spec.ts  cell-full-ab.spec.ts  cell-mex-ab.spec.ts  cell-profile-ab.spec.ts  cell-wander-motion.spec.ts  clipboard-output.spec.ts  dictionary.spec.ts  handy-theme-switch.spec.ts  handy-themes-live-gallery.spec.ts  history.spec.ts  metaballs3d-pulse.spec.ts  native-overlay-themes.spec.ts  navigation.spec.ts  nspanel-pill-visible.spec.ts  nspanel-pill.spec.ts  overlay-page.spec.ts  (+9 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: apple_intelligence.rs  error.rs  lib.rs
src-tauri/src/audio/: encoder.rs  level.rs  mod.rs
src-tauri/src/audio/level/: tests.rs
src-tauri/src/audio/vad/: mod.rs  smoothed.rs  tests.rs  threshold.rs
src-tauri/src/audio_feedback/: mod.rs  tests.rs
src-tauri/src/commands/: config.rs  debug.rs  mod.rs  onboarding.rs  overlay.rs  recording.rs  shortcut_bindings.rs  suggestions.rs
src-tauri/src/config/: consts.rs  mod.rs  validation.rs
src-tauri/src/learning/: normalizer.rs
src-tauri/src/llm/: engine.rs  mod.rs
src-tauri/src/llm/prompts/: mod.rs
src-tauri/src/llm/provider/: http.rs  mod.rs  tests.rs
src-tauri/src/orchestrator/: audio_level.rs  coordinator.rs  dispatch.rs  mod.rs  overlay_manager.rs  post_process.rs  recording.rs  state.rs  tests.rs
src-tauri/src/orchestrator/transcription/: client.rs  context.rs  tests.rs
src-tauri/src/output/: tests.rs  xkb.rs
src-tauri/src/output/auto_submit/: mod.rs
src-tauri/src/overlay/: mod.rs  themes_handy_tests.rs  types.rs
src-tauri/src/overlay/themes/: handy.rs  mod.rs
src-tauri/src/overlay_bin/: render.rs  tests.rs  types.rs
src-tauri/src/overlay_bin/platform/macos/: draw.rs
src-tauri/src/overlay_native/: backend.rs  color.rs  mod.rs  nspanel.rs  theme.rs  webview.rs
src-tauri/src/permissions/: checker.rs  macos.rs
src-tauri/src/setup/: debug_socket.rs  logging.rs  mod.rs  permission_check.rs  state.rs  tests.rs
src-tauri/src/shortcut/: mod.rs
src-tauri/src/shortcut/binding/: mod.rs  tests.rs
src-tauri/src/shortcut/dispatcher/: mod.rs  tests.rs
src-tauri/src/storage/: config_ini.rs  config_sqlite.rs  corrections_sqlite.rs  debug_storage.rs  dictionary.rs  factory.rs  history_sqlite.rs  mod.rs  sqlite_base.rs
src-tauri/src/storage/prompts_sqlite/: mod.rs
src-tauri/src/storage/providers/: storage.rs
src-tauri/src/theme_engine/: loader.rs  manifest.rs
src-tauri/src/transcription/: mod.rs
src-tauri/swift/: apple_intelligence.swift  apple_intelligence_bridge.h  apple_intelligence_stub.swift
src-tauri/themes/all_aquarium/: theme.js
src-tauri/themes/dark/: theme.js  theme.json
src-tauri/themes/default/: theme.js  theme.json
src-tauri/themes/didinium_drift/: theme.js  theme.json
src-tauri/themes/drifting_contour/: theme.js  theme.json
src-tauri/themes/duo_aquarium/: theme.js
src-tauri/themes/euglena_drift/: theme.js  theme.json
src-tauri/themes/lavalamp/: theme.js
src-tauri/themes/living_reed/: theme.json
src-tauri/themes/metaballs/: theme.js  theme.json
src-tauri/themes/metaballs25d/: theme.js
src-tauri/themes/metaballs3d/: theme.js
src-tauri/themes/monochrome/: theme.js  theme.json
src-tauri/themes/neon/: theme.js  theme.json
src-tauri/themes/paramecium_solo/: theme.js  theme.json
src-tauri/themes/quiet_reed/: theme.json
src-tauri/themes/vorticella_bloom/: theme.js  theme.json
src-tauri/themes/winamp_classic/: theme.js  theme.json
(+281 files in other folders)
