[package]
name = "voice"
version = "0.1.0"
description = "Voice dictation app"
authors = ["SoupaWhisper"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"
default-run = "voice"

[lib]
name = "voice_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
doctest = false

[[bin]]
name = "voice"
path = "src/main.rs"

# Phase 7 cleanup: the `soupawhisper-overlay` egui-based subprocess
# binary was removed. Rendering is now handled by the theme-engine
# (React + WASM/WebGL code themes) inside the webview overlay,
# which covers all platforms.

[[bin]]
name = "typing_bench"
path = "src/bin/typing_bench.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2.0.0-rc.1"

# SQLite for history (compatible with Python soupawhisper)
rusqlite = { version = "0.32", features = ["bundled"] }

# Type-safe Tauri command bindings — autogenerates src/bindings.ts
specta = { version = "=2.0.0-rc.22", features = ["chrono"] }
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }

# Parsing
rust-ini = "0.21"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

# Image
png = "0.17"

# Utils
dirs = "5"
anyhow = "1"
thiserror = "2"
once_cell = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
async-trait = "0.1"

# Audio recording
cpal = "0.15"
hound = "3.5"

# Audio feedback playback (start/stop/error beeps). Small, well-tested
# wrapper over cpal; no GUI deps. Only used by `audio_feedback` module.
rodio = { version = "0.20", default-features = false, features = ["wav"] }

# FFT for spectrum analyzer visualization
rustfft = "6.2"

# Silero VAD (ONNX-based voice activity detection)
vad-rs = { git = "https://github.com/cjpais/vad-rs", default-features = false }

# HTTP client for transcription API
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }

# Clipboard
arboard = "3"

# Low-level keyboard input (for single modifier hotkeys)
# Using git version with macOS main thread fix (PR #147, merged 2025-05-20)
rdev = { git = "https://github.com/Narsil/rdev", rev = "73123959276f0f29972b94e654f04614ba3826d2" }

# Cross-platform text input (fast typing via x11rb, not xdotool)
enigo = { version = "0.6", default-features = false, features = ["x11rb"] }

# Phase 7 cleanup removed the native egui/glfw overlay backend.
# Post-cleanup: replaced the lone `egui::Color32` usage with a tiny
# in-tree color type (overlay_native/color.rs), so the egui dep is
# fully gone now. Cuts ~30 transitive crates and several seconds of
# cold compile time.

# macOS: AppKit deps for the webview overlay (focus-stealing-free, all-Spaces).
[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"
tauri-plugin-macos-permissions = "2.3.0"
# Thin AppKit NSWindow tuning for the webview overlay (level + Spaces parity
# with the old NSPanel). Unifies with the in-tree 0.6.4 / 0.3.2 pulled by
# tauri/wry — no duplicate crate version.
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSResponder"] }
# macOS-only override: enable `macos-private-api` needed by the webview
# overlay's transparent window (Tauri gates macOS transparency behind it).
tauri = { version = "2", features = ["tray-icon", "devtools", "macos-private-api"] }

# X11 thread safety (XInitThreads for rdev + GTK)
[target.'cfg(target_os = "linux")'.dependencies]
x11 = { version = "2.21", features = ["xlib"] }
# XKB extension for layout switching (fix punctuation on Russian layout)
x11rb = { version = "0.13", features = ["xkb"] }
# WebKitGTK minimum-size lift (Tauri upstream #6125 — 200×200 hardcoded)
webkit2gtk = "2.0.2"
gtk = "0.18.2"

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
mockito = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
